--- a/choujiang/m/indexm-login.html
+++ b/choujiang/m/indexm-login.html
@@ -100,7 +100,7 @@
 				<!--中奖信息end-->
 				<!--奖品预览 start-->
 				<div class="prizepre">
-					<h2 class="moduletitle"><span><em>奖品预览</em></span></h2>
+					<h2 class="moduletitle"><span><em>您的五福集齐了吗？</em></span></h2>
 					<div class="prizepre-list-three prizepre-list">
 						<ul class="clearfix">
 							<li>
@@ -191,7 +191,7 @@
 			<a class="bgClose"></a>
 			<div class="popbox">
 				<div class="pophead">
-					<h1 class="poptit">登录账户</h1>
+					<h1 class="poptit">登录账户<a class="popclose"></a></h1>
 				</div>
 				<div class="popconten">
 					<div class="item clearfix">
@@ -212,7 +212,7 @@
 			<a class="bgClose"></a>
 			<div class="popbox">
 				<div class="pophead">
-					<h1 class="poptit">我的福卡</h1>
+					<h1 class="poptit">我的福卡<a class="popclose"></a></h1>
 				</div>
 				<div class="popconten">
 					<ul class="clearfix myfoca-list">
@@ -224,7 +224,7 @@
 						</li>
 						<li class="popconten-item02">
 							<a>
-								<img src="images/foca_01.png">
+								<img src="images/foca_02.png">
 								<span class="popconten-num"><em>2</em></span>
 							</a>
 						</li>
@@ -240,9 +240,9 @@
 								<span class="popconten-num"><em>1</em></span>
 							</a>
 						</li>
-						<li class="popconten-item06">
+						<li class="popconten-item05">
 							<a>
-								<img src="images/foca_04.png">
+								<img src="images/foca_05.png">
 								<span class="popconten-num"><em>1</em></span>
 							</a>
 						</li>
@@ -262,7 +262,7 @@
 			<a class="bgClose"></a>
 			<div class="popbox">
 				<div class="pophead">
-					<h1 class="poptit">转赠福卡</h1>
+					<h1 class="poptit">转赠福卡<a class="popclose"></a></h1>
 				</div>
 				<div class="popconten">
 					<ul class="clearfix myfoca-list">
@@ -290,7 +290,7 @@
 								<span class="popconten-num"><em>1</em></span>
 							</a>
 						</li>
-						<li class="popconten-item06">
+						<li class="popconten-item05">
 							<a>
 								<img src="images/foca_05.png">
 								<span class="popconten-num"><em>1</em></span>
@@ -321,7 +321,7 @@
 			<a class="bgClose"></a>
 			<div class="popbox">
 				<div class="pophead">
-					<h1 class="poptit">转赠福卡</h1>
+					<h1 class="poptit">转赠福卡<a class="popclose"></a></h1>
 				</div>
 				<div class="popconten">
 					<ul class="clearfix myfoca-list">
@@ -333,7 +333,7 @@
 						</li>
 						<li class="popconten-item02 active">
 							<a>
-								<img src="images/foca_01.png">
+								<img src="images/foca_02.png">
 								<span class="popconten-num"><em>1</em></span>
 							</a>
 						</li>
@@ -351,7 +351,7 @@
 						</li>
 						<li class="popconten-item05">
 							<a>
-								<img src="images/foca_04.png">
+								<img src="images/foca_05.png">
 								<span class="popconten-num"><em>1</em></span>
 							</a>
 						</li>
