--- a/choujiang/m/indexm.html
+++ b/choujiang/m/indexm.html
@@ -90,7 +90,7 @@
 				<!--中奖信息end-->
 				<!--奖品预览 start-->
 				<div class="prizepre">
-					<h2 class="moduletitle"><span><em>奖品预览</em></span></h2>
+					<h2 class="moduletitle"><span><em>您的五福集齐了吗？</em></span></h2>
 					<div class="prizepre-list-three prizepre-list">
 						<ul class="clearfix">
 							<li>
